--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ zip_safe = True
 packages =
     plover_q_and_a
     plover_q_and_a.config
-    plover_q_and_a.meta
+    plover_q_and_a.sign
 
 [options.entry_points]
 plover.extension =
