Create reusable GitHub workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,18 +10,13 @@ concurrency:
   group: ci-tests-${{ github.ref }}-1
   cancel-in-progress: true
 jobs:
+  setup:
+    uses: ./.github/workflows/setup.yml
   build:
+    name: Lint and Test
     runs-on: ubuntu-latest
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-
-      - name: Install dependencies
+      - name: Install test/lint dependencies
         run: pip install pytest pylint
 
       - name: Run linter
