--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
     tags:
       - "*"
 jobs:
+  # Adapted from: https://github.com/pypa/gh-action-pypi-publish#usage
   pypi-publish:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     name: Upload release to PyPI
