--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,8 @@ on:
 jobs:
   # Adapted from: https://github.com/pypa/gh-action-pypi-publish#usage
   pypi-publish:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-    name: Upload release to PyPI
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
+    name: Build, Lint, Test, Release to PyPI
     runs-on: ubuntu-latest
     environment:
       name: release
@@ -24,6 +24,15 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
+
+      - name: Install test/lint dependencies
+        run: pip install pytest pylint
+
+      - name: Run linter
+        run: pylint plover_q_and_a
+
+      - name: Run tests
+        run: pytest
 
       - name: Install build
         run: python -m pip install --upgrade build
