--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: PyPI release
+name: PyPI Release
 on:
   push:
     branches:
@@ -8,7 +8,7 @@ on:
 jobs:
   # Adapted from: https://github.com/pypa/gh-action-pypi-publish#usage
   pypi-publish:
-    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
+    if: ${{ startsWith(github.ref, 'refs/tags') }}
     name: Build, Lint, Test, Release to PyPI
     runs-on: ubuntu-latest
     environment:
