--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
     permissions:
       id-token: write
     steps:
-      - name: Clone repository
+      - name: Clone Repository
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -25,20 +25,20 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Install test/lint dependencies
+      - name: Install Test/Lint Dependencies
         run: pip install pytest pylint
 
-      - name: Run linter
+      - name: Run Linter
         run: pylint plover_q_and_a
 
-      - name: Run tests
+      - name: Run Tests
         run: pytest
 
-      - name: Install build
+      - name: Install Build
         run: python -m pip install --upgrade build
 
       - name: Build
         run: python -m build
 
-      - name: Publish package distributions to PyPI
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
