Fix type annotations and add type checking

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,3 +36,9 @@ plover.extension =
 
 [tool:pytest]
 pythonpath = plover_q_and_a
+
+[mypy]
+strict = True
+
+[mypy-plover.*]
+ignore_missing_imports = True
