Make test dependencies explicit in optional dependencies, and add more dev info to the README

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ jobs:
           python-version: 3.9
 
       - name: Install Test, Lint, Type Checking Dependencies
-        run: pip install pytest pylint mypy coverage
+        run: python -m pip install --editable ".[test]"
+
 
       - name: Run Linter
         run: pylint plover_q_and_a
