--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,14 @@ packages =
 plover.extension =
     plover_q_and_a = plover_q_and_a.extension:QAndA
 
+[options.extras_require]
+test=
+    coverage
+    mypy
+    pylint
+    pytest
+    pytest-cov
+
 [tool:pytest]
 pythonpath = plover_q_and_a
 
