--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,7 @@
 [MAIN]
-ignored-modules=plover.formatting,plover.machine.base,plover.registry,plover.oslayer,plover.engine
+ignored-modules =
+    plover.engine
+    plover.formatting
+    plover.machine.base
+    plover.oslayer
+    plover.registry
