Fix module initialisation bug

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 name = plover_q_and_a
 url = https://github.com/paulfioravanti/plover-q-and-a
-version = 0.3.12
+version = 0.3.13
 
 [options]
 install_requires =
@@ -27,6 +27,7 @@ zip_safe = True
 packages =
     plover_q_and_a
     plover_q_and_a.config
+    plover_q_and_a.config.parser
     plover_q_and_a.sign
     plover_q_and_a.speaker
 
