--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ zip_safe = True
 packages =
     plover_q_and_a
     plover_q_and_a.config
-    plover_q_and_a.config.parser
+    plover_q_and_a.config.transformer
     plover_q_and_a.sign
     plover_q_and_a.speaker
 
