--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,10 @@ jobs:
         run: python -m pip install --editable ".[test]"
 
       - name: Run Linter
-        run: pylint plover_q_and_a
+        run: pylint src
 
       - name: Run Type Checker
-        run: mypy plover_q_and_a
+        run: mypy src
 
       - name: Run Tests
         run: pytest
