--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 name = plover_q_and_a
 url = https://github.com/paulfioravanti/plover-q-and-a
-version = 0.4.2
+version = 0.4.3
 
 [options]
 install_requires =
@@ -24,12 +24,9 @@ install_requires =
 setup_requires =
     setuptools >= 30.3.0
 zip_safe = True
-packages =
-    plover_q_and_a
-    plover_q_and_a.config
-    plover_q_and_a.config.transformer
-    plover_q_and_a.sign
-    plover_q_and_a.speaker
+package_dir =
+    = src
+packages = find:
 
 [options.entry_points]
 plover.extension =
@@ -43,8 +40,8 @@ test =
     pytest
     pytest-cov
 
-[tool:pytest]
-pythonpath = plover_q_and_a
+[options.packages.find]
+where = src
 
 [mypy]
 strict = True
